@@ -4,6 +4,8 @@ Hadoop MapReduce Change Log
 
     MAPREDUCE-6213. NullPointerException caused by job history server addr not
     resolvable. (Peng Zhang via harsh)
+    
+    MAPREDUCE-4785. TestMRApp occasionally fails (haibochen via rkanter)
 
     MAPREDUCE-5649. Reduce cannot use more than 2G memory for the final merge
     (Gera Shegalov via jlowe)
